--- a/notebooks/distributions.ipynb
+++ b/notebooks/distributions.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 2,
    "id": "78a610be-d12c-40e2-a720-ac8e0b1c674c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-10 16:53:21.559515: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-10 16:53:21.573540: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "/home/kdrabicki/anaconda3/envs/cpu_env/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0e65eecf-8655-46f2-9ac4-f8d4d52f8d7d",
    "metadata": {},
    "outputs": [
@@ -65,7 +77,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-03 15:23:50.452861: E tensorflow/core/util/util.cc:131] oneDNN supports DT_INT32 only on platforms with AVX-512. Falling back to the default Eigen-based implementation if present.\n"
+      "2025-10-10 16:53:49.429291: E tensorflow/core/util/util.cc:131] oneDNN supports DT_INT32 only on platforms with AVX-512. Falling back to the default Eigen-based implementation if present.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 27\u001b[39m\n\u001b[32m     25\u001b[39m     dist = bnn_net(feat)\n\u001b[32m     26\u001b[39m     all_means.append(dist.mean())\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m     all_probs.append([np.exp(dist.log_prob(point)) \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m points])\n\u001b[32m     29\u001b[39m bnn_points.append((np.mean(all_probs, axis=\u001b[32m0\u001b[39m), np.mean(all_means), y_pred, r_mag))\n\u001b[32m     31\u001b[39m \u001b[38;5;66;03m# GMM\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/cpu_env/lib/python3.12/site-packages/tensorflow_probability/python/distributions/distribution.py:1287\u001b[39m, in \u001b[36mDistribution.log_prob\u001b[39m\u001b[34m(self, value, name, **kwargs)\u001b[39m\n\u001b[32m   1275\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mlog_prob\u001b[39m(\u001b[38;5;28mself\u001b[39m, value, name=\u001b[33m'\u001b[39m\u001b[33mlog_prob\u001b[39m\u001b[33m'\u001b[39m, **kwargs):\n\u001b[32m   1276\u001b[39m \u001b[38;5;250m  \u001b[39m\u001b[33;03m\"\"\"Log probability density/mass function.\u001b[39;00m\n\u001b[32m   1277\u001b[39m \n\u001b[32m   1278\u001b[39m \u001b[33;03m  Args:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   1285\u001b[39m \u001b[33;03m      values of type `self.dtype`.\u001b[39;00m\n\u001b[32m   1286\u001b[39m \u001b[33;03m  \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1287\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._call_log_prob(value, name, **kwargs)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/cpu_env/lib/python3.12/site-packages/tensorflow_probability/python/distributions/distribution.py:1269\u001b[39m, in \u001b[36mDistribution._call_log_prob\u001b[39m\u001b[34m(self, value, name, **kwargs)\u001b[39m\n\u001b[32m   1267\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m._name_and_control_scope(name, value, kwargs):\n\u001b[32m   1268\u001b[39m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m_log_prob\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m-> \u001b[39m\u001b[32m1269\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._log_prob(value, **kwargs)\n\u001b[32m   1270\u001b[39m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m_prob\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m   1271\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m tf.math.log(\u001b[38;5;28mself\u001b[39m._prob(value, **kwargs))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/cpu_env/lib/python3.12/site-packages/tensorflow_probability/python/layers/internal/distribution_tensor_coercible.py:114\u001b[39m, in \u001b[36m_TensorCoercible._log_prob\u001b[39m\u001b[34m(self, value, **kwargs)\u001b[39m\n\u001b[32m    113\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_log_prob\u001b[39m(\u001b[38;5;28mself\u001b[39m, value, **kwargs):\n\u001b[32m--> \u001b[39m\u001b[32m114\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.tensor_distribution._log_prob(value, **kwargs)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/cpu_env/lib/python3.12/site-packages/tensorflow_probability/python/distributions/mixture_same_family.py:350\u001b[39m, in \u001b[36m_MixtureSameFamily._log_prob\u001b[39m\u001b[34m(self, x)\u001b[39m\n\u001b[32m    348\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_log_prob\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[32m    349\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m tf.reduce_logsumexp(\n\u001b[32m--> \u001b[39m\u001b[32m350\u001b[39m       \u001b[38;5;28mself\u001b[39m._per_mixture_component_log_prob(x), axis=-\u001b[32m1\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/cpu_env/lib/python3.12/site-packages/tensorflow_probability/python/distributions/mixture_same_family.py:342\u001b[39m, in \u001b[36m_MixtureSameFamily._per_mixture_component_log_prob\u001b[39m\u001b[34m(self, x)\u001b[39m\n\u001b[32m    328\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_per_mixture_component_log_prob\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[32m    329\u001b[39m \u001b[38;5;250m  \u001b[39m\u001b[33;03m\"\"\"Per mixture component log probability.\u001b[39;00m\n\u001b[32m    330\u001b[39m \n\u001b[32m    331\u001b[39m \u001b[33;03m  Args:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    340\u001b[39m \u001b[33;03m    number of mixture components.\u001b[39;00m\n\u001b[32m    341\u001b[39m \u001b[33;03m  \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m342\u001b[39m   x = \u001b[38;5;28mself\u001b[39m._pad_sample_dims(x)\n\u001b[32m    343\u001b[39m   log_prob_x = \u001b[38;5;28mself\u001b[39m.components_distribution.log_prob(x)  \u001b[38;5;66;03m# [S, B, k]\u001b[39;00m\n\u001b[32m    344\u001b[39m   log_mix_prob = tf.math.log_softmax(\n\u001b[32m    345\u001b[39m       \u001b[38;5;28mself\u001b[39m.mixture_distribution.logits_parameter(), axis=-\u001b[32m1\u001b[39m)  \u001b[38;5;66;03m# [B, k]\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/cpu_env/lib/python3.12/site-packages/tensorflow_probability/python/distributions/mixture_same_family.py:471\u001b[39m, in \u001b[36m_MixtureSameFamily._pad_sample_dims\u001b[39m\u001b[34m(self, x, event_ndims)\u001b[39m\n\u001b[32m    467\u001b[39m ndims = ps.rank(x)\n\u001b[32m    468\u001b[39m \u001b[38;5;66;03m# Must do the c_t_t in case ndims or event_ndims are Tensors and shape is\u001b[39;00m\n\u001b[32m    469\u001b[39m \u001b[38;5;66;03m# ndarray. Otherwise we get `TypeError: slice indices must be integers\u001b[39;00m\n\u001b[32m    470\u001b[39m \u001b[38;5;66;03m# or None or have an __index__ method`.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m471\u001b[39m shape = ps.convert_to_shape_tensor(ps.shape(x))\n\u001b[32m    472\u001b[39m d = ndims - event_ndims\n\u001b[32m    473\u001b[39m x = tf.reshape(\n\u001b[32m    474\u001b[39m     x, shape=ps.concat([shape[:d], [\u001b[32m1\u001b[39m], shape[d:]], axis=\u001b[32m0\u001b[39m))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/cpu_env/lib/python3.12/site-packages/tensorflow/python/util/traceback_utils.py:140\u001b[39m, in \u001b[36mfilter_traceback.<locals>.error_handler\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    138\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34merror_handler\u001b[39m(*args, **kwargs):\n\u001b[32m    139\u001b[39m   \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m140\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_traceback_filtering_enabled():\n\u001b[32m    141\u001b[39m       \u001b[38;5;28;01mreturn\u001b[39;00m fn(*args, **kwargs)\n\u001b[32m    142\u001b[39m   \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mNameError\u001b[39;00m:\n\u001b[32m    143\u001b[39m     \u001b[38;5;66;03m# In some very rare cases,\u001b[39;00m\n\u001b[32m    144\u001b[39m     \u001b[38;5;66;03m# `is_traceback_filtering_enabled` (from the outer scope) may not be\u001b[39;00m\n\u001b[32m    145\u001b[39m     \u001b[38;5;66;03m# accessible from inside this function\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/cpu_env/lib/python3.12/site-packages/tensorflow/python/util/traceback_utils.py:47\u001b[39m, in \u001b[36mis_traceback_filtering_enabled\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     32\u001b[39m \u001b[38;5;129m@tf_export\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mdebugging.is_traceback_filtering_enabled\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mis_traceback_filtering_enabled\u001b[39m():\n\u001b[32m     34\u001b[39m \u001b[38;5;250m  \u001b[39m\u001b[33;03m\"\"\"Check whether traceback filtering is currently enabled.\u001b[39;00m\n\u001b[32m     35\u001b[39m \n\u001b[32m     36\u001b[39m \u001b[33;03m  See also `tf.debugging.enable_traceback_filtering()` and\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     45\u001b[39m \u001b[33;03m    was called).\u001b[39;00m\n\u001b[32m     46\u001b[39m \u001b[33;03m  \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m   value = \u001b[38;5;28mgetattr\u001b[39m(_ENABLE_TRACEBACK_FILTERING, \u001b[33m'\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m'\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     48\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m value\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -145,34 +176,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "6d58c5e2-a22b-4538-ac14-cc61972cd205",
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = scaler.transform(X_test[500:501])\n",
+    "scaler = gmm.strategy.scaler\n",
+    "features = scaler.transform(X_test[500:503])\n",
     "dist = gmm_net(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7ab28c45-09cb-47fa-a4e6-ff1d9d81c56a",
+   "execution_count": 28,
+   "id": "7e8c828f-e6e2-48bb-8a38-e7038a51983a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-8.92838e-05], dtype=float32)>"
+       "(100,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dist.log_cdf(4)"
+    "np.linspace(0.05, 5, 100).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "7ab28c45-09cb-47fa-a4e6-ff1d9d81c56a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (100, 1, 1)\n",
+      "tf.Tensor([-7.194581  -6.7175665 -4.860421 ], shape=(3,), dtype=float32)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-8.746021  , -7.567358  ,  0.35198128], dtype=float32)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array(np.linspace(0.05, 5, 100)).reshape(-1,1,1)\n",
+    "print(\"Shape:\", arr.shape)\n",
+    "print(dist.log_prob(1))\n",
+    "dist.log_prob(arr).numpy().T[:,1]"
    ]
   },
   {
@@ -382,8 +446,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "b92eef3d-283c-4c60-94f1-c8d923250781",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m pd.rea\n",
+      "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ca5367b-4560-4348-9744-bfe8aeb9c9dd",
    "metadata": {},
    "outputs": [],
    "source": []
